test/expected/declare_ii.out
declare x as inline int
        ^
9: error: inline variables are not supported in C
